--- a/main.yaml
+++ b/main.yaml
@@ -1,4 +1,56 @@
 ---
   - hosts:  all
+    vars:
+      - mylist: 
+          - a
+          - b
+          - c
     tasks:
-    - ping:
+    - debug:
+        msg: "hello i am harshit mahajan: {{inventory_hostname}}"
+    - debug:
+        var: inventory_hostname
+    - ansible.builtin.file:
+        path: /tmp/h
+        state: touch
+    - ansible.builtin.copy:
+        src: /tmp/h
+        dest: /tmp/hh
+    - ansible.builtin.copy:
+        content: |
+            hello
+            i am harshit
+        dest: /tmp/hhh
+    - ansible.builtin.file:
+        path: /tmp/dir
+        state: directory
+    - ansible.builtin.file:
+        path: /tmp/dir/abc
+        state: touch
+    - ansible.builtin.file:
+        path: /tmp/dir
+        state: absent
+    - ansible.builtin.shell:
+        cmd: "echo hello world"
+      notify:
+        - handler1
+      register: output
+    - ansible.builtin.debug:
+        msg: "output: {{output}}"
+    - debug:
+        msg: "Items: {{item}}"
+      when: item != "b"  
+      with_items: "{{mylist}}"  
+
+    handlers:
+    - name: handler1
+      debug:
+        msg: "inside handler1" 
+
+    # difference in command and shell module
+    # ad hoc commands (copy, setup)
+    # documentation around user module
+    # --syntax-check, -C (dry run)
+
+
+
